--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1"
   }
