--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
     "mongoose": "^6.9.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "socket.io": "^4.5.4"
   }
 }
